# aigc-humanizer-zh

./: .gitignore  LICENSE  README.md  SKILL.md  WORKFLOW.md  humanizer-zh-full.md  humanizer-zh-light.md  push_test.txt  pyproject.toml  server.py
docs/: red-blue-workflow.md
scripts/: evaluate_red_blue.py
src/: __init__.py  evaluator.py  patterns.py  scanner.py
tests/: test_evaluator.py  test_patterns.py  test_red_blue_evaluator.py  test_scanner.py  test_server_wrappers.py
tests/fixtures/red_blue/: synthetic.jsonl
